crates/ty_python_semantic/resources/mdtest/snapshots/final.md_-_Tests_for_the_`@typi…_-_Cannot_override_a_me…_(338615109711a91b).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: final.md - Tests for the `@typing(_extensions).final` decorator - Cannot override a method decorated with `@final`
mdtest path: crates/ty_python_semantic/resources/mdtest/final.md
---

# Python source files

## mdtest_snippet.pyi

```
  1 | from typing_extensions import final, Callable, TypeVar
  2 | 
  3 | def lossy_decorator(fn: Callable) -> Callable: ...
  4 | 
  5 | class Parent:
  6 |     @final
  7 |     def foo(self): ...
  8 | 
  9 |     @final
 10 |     @property
 11 |     def my_property1(self) -> int: ...
 12 | 
 13 |     @property
 14 |     @final
 15 |     def my_property2(self) -> int: ...
 16 | 
 17 |     @final
 18 |     @classmethod
 19 |     def class_method1(cls) -> int: ...
 20 | 
 21 |     @classmethod
 22 |     @final
 23 |     def class_method2(cls) -> int: ...
 24 | 
 25 |     @final
 26 |     @staticmethod
 27 |     def static_method1() -> int: ...
 28 | 
 29 |     @staticmethod
 30 |     @final
 31 |     def static_method2() -> int: ...
 32 | 
 33 |     @lossy_decorator
 34 |     @final
 35 |     def decorated_1(self): ...
 36 | 
 37 |     @final
 38 |     @lossy_decorator
 39 |     def decorated_2(self): ...
 40 | 
 41 | class Child(Parent):
 42 |     # explicitly test the concise diagnostic message,
 43 |     # which is different to the verbose diagnostic summary message:
 44 |     #
 45 |     # error: [override-of-final-method] "Cannot override final member `foo` from superclass `Parent`"
 46 |     def foo(self): ...
 47 |     @property
 48 |     def my_property1(self) -> int: ...  # error: [override-of-final-method]
 49 | 
 50 |     @property
 51 |     def my_property2(self) -> int: ...  # error: [override-of-final-method]
 52 | 
 53 |     @classmethod
 54 |     def class_method1(cls) -> int: ...  # error: [override-of-final-method]
 55 | 
 56 |     @staticmethod
 57 |     def static_method1() -> int: ...  # error: [override-of-final-method]
 58 | 
 59 |     @classmethod
 60 |     def class_method2(cls) -> int: ...  # error: [override-of-final-method]
 61 | 
 62 |     @staticmethod
 63 |     def static_method2() -> int: ...  # error: [override-of-final-method]
 64 | 
 65 |     def decorated_1(self): ...  # TODO: should emit [override-of-final-method]
 66 | 
 67 |     @lossy_decorator
 68 |     def decorated_2(self): ...  # TODO: should emit [override-of-final-method]
 69 | 
 70 | class OtherChild(Parent): ...
 71 | 
 72 | class Grandchild(OtherChild):
 73 |     @staticmethod
 74 |     # TODO: we should emit a Liskov violation here too
 75 |     # error: [override-of-final-method]
 76 |     def foo(): ...
 77 |     @property
 78 |     # TODO: we should emit a Liskov violation here too
 79 |     # error: [override-of-final-method]
 80 |     def my_property1(self) -> str: ...
 81 |     # TODO: we should emit a Liskov violation here too
 82 |     # error: [override-of-final-method]
 83 |     class_method1 = None
 84 | 
 85 | # Diagnostic edge case: `final` is very far away from the method definition in the source code:
 86 | 
 87 | T = TypeVar("T")
 88 | 
 89 | def identity(x: T) -> T: ...
 90 | 
 91 | class Foo:
 92 |     @final
 93 |     @identity
 94 |     @identity
 95 |     @identity
 96 |     @identity
 97 |     @identity
 98 |     @identity
 99 |     @identity
100 |     @identity
101 |     @identity
102 |     @identity
103 |     @identity
104 |     @identity
105 |     @identity
106 |     @identity
107 |     @identity
108 |     @identity
109 |     @identity
110 |     @identity
111 |     def bar(self): ...
112 | 
113 | class Baz(Foo):
114 |     def bar(self): ...  # error: [override-of-final-method]
```

# Diagnostics

```
error[override-of-final-method]: Cannot override `Parent.foo`
  --> src/mdtest_snippet.pyi:46:9
   |
44 |     #
45 |     # error: [override-of-final-method] "Cannot override final member `foo` from superclass `Parent`"
46 |     def foo(self): ...
   |         ^^^ Overrides a definition from superclass `Parent`
47 |     @property
48 |     def my_property1(self) -> int: ...  # error: [override-of-final-method]
   |
info: `Parent.foo` is decorated with `@final`, forbidding overrides
 --> src/mdtest_snippet.pyi:6:5
  |
5 | class Parent:
6 |     @final
  |     ------
7 |     def foo(self): ...
  |         --- `Parent.foo` defined here
8 |
9 |     @final
  |
help: Remove the override of `foo`
info: rule `override-of-final-method` is enabled by default
43 |     # which is different to the verbose diagnostic summary message:
44 |     #
45 |     # error: [override-of-final-method] "Cannot override final member `foo` from superclass `Parent`"
   -     def foo(self): ...
46 +     
47 |     @property
48 |     def my_property1(self) -> int: ...  # error: [override-of-final-method]
49 | 
note: This is an unsafe fix and may change runtime behavior

```

```
error[override-of-final-method]: Cannot override `Parent.my_property1`
  --> src/mdtest_snippet.pyi:48:9
   |
46 |     def foo(self): ...
47 |     @property
48 |     def my_property1(self) -> int: ...  # error: [override-of-final-method]
   |         ^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
49 |
50 |     @property
   |
info: `Parent.my_property1` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:9:5
   |
 7 |     def foo(self): ...
 8 |
 9 |     @final
   |     ------
10 |     @property
11 |     def my_property1(self) -> int: ...
   |         ------------ `Parent.my_property1` defined here
12 |
13 |     @property
   |
help: Remove the override of `my_property1`
info: rule `override-of-final-method` is enabled by default
44 |     #
45 |     # error: [override-of-final-method] "Cannot override final member `foo` from superclass `Parent`"
46 |     def foo(self): ...
   -     @property
   -     def my_property1(self) -> int: ...  # error: [override-of-final-method]
47 +       # error: [override-of-final-method]
48 | 
49 |     @property
50 |     def my_property2(self) -> int: ...  # error: [override-of-final-method]
note: This is an unsafe fix and may change runtime behavior

```

```
error[override-of-final-method]: Cannot override `Parent.my_property2`
  --> src/mdtest_snippet.pyi:51:9
   |
50 |     @property
51 |     def my_property2(self) -> int: ...  # error: [override-of-final-method]
   |         ^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
52 |
53 |     @classmethod
   |
info: `Parent.my_property2` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:14:5
   |
13 |     @property
14 |     @final
   |     ------
15 |     def my_property2(self) -> int: ...
   |         ------------ `Parent.my_property2` defined here
16 |
17 |     @final
   |
help: Remove the override of `my_property2`
info: rule `override-of-final-method` is enabled by default
47 |     @property
48 |     def my_property1(self) -> int: ...  # error: [override-of-final-method]
49 | 
   -     @property
   -     def my_property2(self) -> int: ...  # error: [override-of-final-method]
50 +       # error: [override-of-final-method]
51 | 
52 |     @classmethod
53 |     def class_method1(cls) -> int: ...  # error: [override-of-final-method]
note: This is an unsafe fix and may change runtime behavior

```

```
error[override-of-final-method]: Cannot override `Parent.class_method1`
  --> src/mdtest_snippet.pyi:54:9
   |
53 |     @classmethod
54 |     def class_method1(cls) -> int: ...  # error: [override-of-final-method]
   |         ^^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
55 |
56 |     @staticmethod
   |
info: `Parent.class_method1` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:17:5
   |
15 |     def my_property2(self) -> int: ...
16 |
17 |     @final
   |     ------
18 |     @classmethod
19 |     def class_method1(cls) -> int: ...
   |         ------------- `Parent.class_method1` defined here
20 |
21 |     @classmethod
   |
help: Remove the override of `class_method1`
info: rule `override-of-final-method` is enabled by default
50 |     @property
51 |     def my_property2(self) -> int: ...  # error: [override-of-final-method]
52 | 
   -     @classmethod
   -     def class_method1(cls) -> int: ...  # error: [override-of-final-method]
53 +       # error: [override-of-final-method]
54 | 
55 |     @staticmethod
56 |     def static_method1() -> int: ...  # error: [override-of-final-method]
note: This is an unsafe fix and may change runtime behavior

```

```
error[override-of-final-method]: Cannot override `Parent.static_method1`
  --> src/mdtest_snippet.pyi:57:9
   |
56 |     @staticmethod
57 |     def static_method1() -> int: ...  # error: [override-of-final-method]
   |         ^^^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
58 |
59 |     @classmethod
   |
info: `Parent.static_method1` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:25:5
   |
23 |     def class_method2(cls) -> int: ...
24 |
25 |     @final
   |     ------
26 |     @staticmethod
27 |     def static_method1() -> int: ...
   |         -------------- `Parent.static_method1` defined here
28 |
29 |     @staticmethod
   |
help: Remove the override of `static_method1`
info: rule `override-of-final-method` is enabled by default
53 |     @classmethod
54 |     def class_method1(cls) -> int: ...  # error: [override-of-final-method]
55 | 
   -     @staticmethod
   -     def static_method1() -> int: ...  # error: [override-of-final-method]
56 +       # error: [override-of-final-method]
57 | 
58 |     @classmethod
59 |     def class_method2(cls) -> int: ...  # error: [override-of-final-method]
note: This is an unsafe fix and may change runtime behavior

```

```
error[override-of-final-method]: Cannot override `Parent.class_method2`
  --> src/mdtest_snippet.pyi:60:9
   |
59 |     @classmethod
60 |     def class_method2(cls) -> int: ...  # error: [override-of-final-method]
   |         ^^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
61 |
62 |     @staticmethod
   |
info: `Parent.class_method2` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:22:5
   |
21 |     @classmethod
22 |     @final
   |     ------
23 |     def class_method2(cls) -> int: ...
   |         ------------- `Parent.class_method2` defined here
24 |
25 |     @final
   |
help: Remove the override of `class_method2`
info: rule `override-of-final-method` is enabled by default
56 |     @staticmethod
57 |     def static_method1() -> int: ...  # error: [override-of-final-method]
58 | 
   -     @classmethod
   -     def class_method2(cls) -> int: ...  # error: [override-of-final-method]
59 +       # error: [override-of-final-method]
60 | 
61 |     @staticmethod
62 |     def static_method2() -> int: ...  # error: [override-of-final-method]
note: This is an unsafe fix and may change runtime behavior

```

```
error[override-of-final-method]: Cannot override `Parent.static_method2`
  --> src/mdtest_snippet.pyi:63:9
   |
62 |     @staticmethod
63 |     def static_method2() -> int: ...  # error: [override-of-final-method]
   |         ^^^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
64 |
65 |     def decorated_1(self): ...  # TODO: should emit [override-of-final-method]
   |
info: `Parent.static_method2` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:30:5
   |
29 |     @staticmethod
30 |     @final
   |     ------
31 |     def static_method2() -> int: ...
   |         -------------- `Parent.static_method2` defined here
32 |
33 |     @lossy_decorator
   |
help: Remove the override of `static_method2`
info: rule `override-of-final-method` is enabled by default
59 |     @classmethod
60 |     def class_method2(cls) -> int: ...  # error: [override-of-final-method]
61 | 
   -     @staticmethod
   -     def static_method2() -> int: ...  # error: [override-of-final-method]
62 +       # error: [override-of-final-method]
63 | 
64 |     def decorated_1(self): ...  # TODO: should emit [override-of-final-method]
65 | 
note: This is an unsafe fix and may change runtime behavior

```

```
error[override-of-final-method]: Cannot override `Parent.foo`
  --> src/mdtest_snippet.pyi:76:9
   |
74 |     # TODO: we should emit a Liskov violation here too
75 |     # error: [override-of-final-method]
76 |     def foo(): ...
   |         ^^^ Overrides a definition from superclass `Parent`
77 |     @property
78 |     # TODO: we should emit a Liskov violation here too
   |
info: `Parent.foo` is decorated with `@final`, forbidding overrides
 --> src/mdtest_snippet.pyi:6:5
  |
5 | class Parent:
6 |     @final
  |     ------
7 |     def foo(self): ...
  |         --- `Parent.foo` defined here
8 |
9 |     @final
  |
help: Remove the override of `foo`
info: rule `override-of-final-method` is enabled by default
70 | class OtherChild(Parent): ...
71 | 
72 | class Grandchild(OtherChild):
   -     @staticmethod
   -     # TODO: we should emit a Liskov violation here too
   -     # error: [override-of-final-method]
   -     def foo(): ...
73 +     
74 |     @property
75 |     # TODO: we should emit a Liskov violation here too
76 |     # error: [override-of-final-method]
note: This is an unsafe fix and may change runtime behavior

```

```
error[override-of-final-method]: Cannot override `Parent.my_property1`
  --> src/mdtest_snippet.pyi:80:9
   |
78 |     # TODO: we should emit a Liskov violation here too
79 |     # error: [override-of-final-method]
80 |     def my_property1(self) -> str: ...
   |         ^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
81 |     # TODO: we should emit a Liskov violation here too
82 |     # error: [override-of-final-method]
   |
info: `Parent.my_property1` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:9:5
   |
 7 |     def foo(self): ...
 8 |
 9 |     @final
   |     ------
10 |     @property
11 |     def my_property1(self) -> int: ...
   |         ------------ `Parent.my_property1` defined here
12 |
13 |     @property
   |
help: Remove the override of `my_property1`
info: rule `override-of-final-method` is enabled by default
74 |     # TODO: we should emit a Liskov violation here too
75 |     # error: [override-of-final-method]
76 |     def foo(): ...
   -     @property
   -     # TODO: we should emit a Liskov violation here too
   -     # error: [override-of-final-method]
   -     def my_property1(self) -> str: ...
77 +     
78 |     # TODO: we should emit a Liskov violation here too
79 |     # error: [override-of-final-method]
80 |     class_method1 = None
note: This is an unsafe fix and may change runtime behavior

```

```
error[override-of-final-method]: Cannot override `Parent.class_method1`
  --> src/mdtest_snippet.pyi:83:5
   |
81 |     # TODO: we should emit a Liskov violation here too
82 |     # error: [override-of-final-method]
83 |     class_method1 = None
   |     ^^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
84 |
85 | # Diagnostic edge case: `final` is very far away from the method definition in the source code:
   |
info: `Parent.class_method1` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:17:5
   |
15 |     def my_property2(self) -> int: ...
16 |
17 |     @final
   |     ------
18 |     @classmethod
19 |     def class_method1(cls) -> int: ...
   |         ------------- `Parent.class_method1` defined here
20 |
21 |     @classmethod
   |
help: Remove the override of `class_method1`
info: rule `override-of-final-method` is enabled by default
80 |     def my_property1(self) -> str: ...
81 |     # TODO: we should emit a Liskov violation here too
82 |     # error: [override-of-final-method]
   -     class_method1 = None
83 +     
84 | 
85 | # Diagnostic edge case: `final` is very far away from the method definition in the source code:
86 | 
note: This is an unsafe fix and may change runtime behavior

```

```
error[override-of-final-method]: Cannot override `Foo.bar`
   --> src/mdtest_snippet.pyi:114:9
    |
113 | class Baz(Foo):
114 |     def bar(self): ...  # error: [override-of-final-method]
    |         ^^^ Overrides a definition from superclass `Foo`
    |
info: `Foo.bar` is decorated with `@final`, forbidding overrides
   --> src/mdtest_snippet.pyi:92:5
    |
 91 | class Foo:
 92 |     @final
    |     ------
 93 |     @identity
 94 |     @identity
    |
   ::: src/mdtest_snippet.pyi:111:9
    |
109 |     @identity
110 |     @identity
111 |     def bar(self): ...
    |         --- `Foo.bar` defined here
112 |
113 | class Baz(Foo):
    |
help: Remove the override of `bar`
info: rule `override-of-final-method` is enabled by default
111 |     def bar(self): ...
112 | 
113 | class Baz(Foo):
    -     def bar(self): ...  # error: [override-of-final-method]
114 +       # error: [override-of-final-method]
note: This is an unsafe fix and may change runtime behavior

```
